public/main.css
html {
	height: 100%;
}

* {
    font-family: 'Space Mono', monospace;
    -webkit-overflow-scrolling: touch;
}

body {
	margin: 0;
	height: 100%;
}


#datuskola {
	z-index: 1000;
	position: absolute;
	right: 40px;
	bottom: 40px;
}

@media only screen and (min-width: 992px) {
	#datuskola {
		width: 70px;
		height: 70px;
		right: 40px;
	}
}

@media only screen and (max-width: 991px) {
	#datuskola {
		width: 60px;
		height: 60px;
		right: 0;
	}
}

#datuskola img {
	width: 100%;
	height: 100%;
}


.wrapper {
	height: 100%;
	min-height: 100%;
	display: flex;
	flex-direction: column;
}

.box {		
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.box-1 {
	height: 80px;
	border-bottom: 3px solid #3cc4f4;
}

.box-2 {
	flex: 1;
}

.box-3 {
	height: 60px;
}

.pad {
   margin-left: 20px !important;
}

#top-row {
	height: 80px;
	width: 100%;
	padding-bottom: 10px;
	padding-top: 10px;

	z-index: 1010;
}

.hidden {
	display: none;
}


.input-row {
	padding-bottom: 15px;
}

#main {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

#mapid {
	width: 100%; 
	height: 100%;
}

#img-upload {
	max-height: 300px;
	max-width: 100%;
}


#crosshair2 {
	z-index: 1000;  
	
	width: 40px;
	height: 40px;

	position: absolute;
}

#crosshair {
	z-index: 1000;
	
	width: 40px;
	height: 40px;

	position: absolute;
	
	left: 100px;
	top: 100px;
}

#box1 {
	position: fixed;
	left: 50%;
	width: 280px;
	margin-left: -90px;
	z-index: 1000;

  	display: block;
}

@media only screen and (min-width: 992px) {
	#box1 {
		bottom: 100px;
	}
}

@media only screen and (max-width: 991px) {
	#box1 {
		bottom: 40px;
	}
}

#select-location-btn {
	width: 180px;
	height: 40px;
    float: left;
}

#cancel-btn {
    width: 50px;
    height: 34px;
}

#cancel {
    width: 20px;
    height: 24px;
	position: relative;
	bottom: 6px;
}

@media only screen and (max-width: 991px) {
	#box1 {
		width: 180px;
		display: grid;
		grid-template-columns: 180px;
		grid-gap: 20px;
	}
	
	#cancel-btn {
		justify-self: center;
	}
}

@media only screen and (min-width: 992px) {
	#box1 {
		width: 280px;
		display: grid;
		grid-template-columns: 180px 100px;
		grid-gap: 20px;
	}
	
	#cancel-btn {
		margin-top: 3px;
	}
}

.top-item {
	display: grid;
	grid-template-columns: 30px auto;
	grid-template-areas:
	"nr image"
	"text text";
	grid-column-gap: 10px;
	grid-row-gap: 10px;
}

.top-number {
	grid-area: nr;
	width: min-content;
	height: min-content;
	padding: 10px;
	background-color: #e2e6ea;
}

.top-image-box {
	grid-area: image;
}

.top-image {
	width: 200px;
	height: 200px; 
	cursor: pointer;
}

.top-text {
	grid-area: text;
	place-self: center;
}

.vote-top-row {
	padding-top: 10px;
	padding-bottom: 10px;
	display: grid;
}

@media only screen and (max-width: 991px) {

    #logo {
        position: fixed;
        top: 30px;
        left: 40px;
        width: 60%;
        max-width: 230px;
        z-index: 1000;
    }

    .vote-top-row {
        grid-template-columns: 1fr;
		grid-column-gap: 10px;
		grid-row-gap: 10px;
    }
}

@media only screen and (min-width: 992px) {

    #logo {
        position: absolute;
        top: 20px;
        left: 0;
        width: 230px;
    }

    .vote-top-row {
        grid-template-columns: 1fr 1fr 1fr;
		grid-column-gap: 10px;
		grid-row-gap: 10px;
    }
}

.vote-top-place {
	padding: 10px;
	margin-right: 10px;
    background-color: #e2e6ea;
    float: right;
}

.vote-top-img {
    max-height: 300px;
    max-width: 80%;
    float: right;
}

.vote-top-title {
    font-size: 24px;
    font-weight: bold;
    font-style: italic;
    text-align: center;
}

.vote-top-count {
	top: 230px;
	left: 110px;
	background: white;
	text-align: center;
	padding: 10px;
	position: absolute;
	display: inline-block;
}

#description-label, #email-label {
    background: #e9ecef;
    border: 1px solid #e2e6ea;
    padding: 10px;
    margin-bottom: 0;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

#about-project-link {
	display: block;
	float: right;
	margin-right: 15px;
	color: darkblue;
}

#report-btn, #report-btn-2, .bbutton {
    border: 2px solid #3cc4f4;
    border-radius: 20px;

    background-color: white;
    color: #3cc4f4;

    font-style: italic;
    font-size:24px;
    font-weight: bold;
    font-family: 'Space Mono', monospace ;

    width: 150px;
}

@media only screen and (max-width: 991px) {
	#report-btn {
		display: none;
	}

	#report-btn-2 {		
		position: fixed;
		bottom: 100px;
		left: 50%;
		margin-left: -75px;
		z-index: 1000;
	}
}

@media only screen and (min-width: 992px) {
	#report-btn {
		display: block;
		float: right;
		margin-right: 15px;
	}
	
	#report-btn-2 {
		display: none;
	}
}

#popup {
    width: 200px;
}

.popup-image {
	max-width: 100%;
	display: block;
    margin: auto;
}

.popup-noimage {
	max-width: 50%;
	display: block;
    margin: auto;
}

.mycontainer {
    display: grid;

    grid-template-columns: 200px;
    grid-row-gap: 10px;
}

.gridbox-right {
    justify-self: end;
}

.gridbox-left {
    justify-self: start;
}


#spin {
	z-index: 1000;

	position: absolute;
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}


/* change the background color */
.navbar-nav {
	background-color: white;
}
/* change the brand and text color */
.navbar-custom .navbar-brand,
.navbar-custom .navbar-text {
    color: #3cc4f4;
}
/* change the link color */
.navbar-custom .navbar-nav .nav-link {
    color: #3cc4f4;
}

.navbar-custom .navbar-toggler-icon {
	background-image:url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
}

.ttext {
    font-size: 12px;
}

#btnLike {
	color: black;
}

.img-container {
    width: 300px;
    height: 300px;
    overflow: hidden;
    margin: 0;
}

.img-container img.wide {
    max-width: 100%;
    max-height: 100%;
    height: auto;
}
.img-container img.tall {
    max-height: 100%;
    max-width: 100%;
    width: auto;
}

.cover {
	position:fixed;
	top:0;
	left:0;
	background:rgba(0,0,0,0.6);
	z-index:10000;
	width:100%;
	height:100%;
	display:none;
  }

.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #3498db;
    width: 120px;
    height: 120px;
    margin: auto;

	position: absolute;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;

    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
}

#big-image {
	margin: 0 auto;
	display: grid;
}

#big-image-src {
	max-width: 765px;
	place-self: center;
}

#small-image {
	cursor: pointer;
}

#small-zoom-in {
	position: relative;
	bottom: 35px;
	left: 165px;
}

#top-zoom-in {
	position: relative;
	bottom: 35px;
	left: 165px;
}

/* Safari */
@-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.velo-form-text {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 12px;
}

.velo-form-check {
	position: relative;
	display: block;
	padding-left: 8px;
}

